[workspace]
members = ["crates/*"]
exclude = ["guide/linkchecker"]

[workspace.package]
authors = ["Michael Lohr <michael@lohr.dev>", "Shemnei"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dotfiles", "cli", "dotfile", "dotfiles-manager", "templating"]

[workspace.dependencies]
# Shared
clap = { version = "4.0.26", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false }
env_logger = { version = "0.9.3", default-features = false, features = ["termcolor", "atty"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
pretty_assertions = "1.3.0"
# Lib
thiserror = "1.0.37"
walkdir = "2.3.2"
unicode-width = "0.1.10"
cfg-if = "1.0.0"
home = "0.5.4"
# Cli
clap = { version = "4.0.25", features = ["derive", "env"] }
clap_mangen = "0.2.4"
clap_complete = "4.0.5"
color-eyre = { version = "0.6.2", default-features = false }
env_logger = { version = "0.9.3", default-features = false, features = ["termcolor", "atty"] }
similar = { version = "2.2.1", features = ["text", "unicode", "inline"] }
console = "0.15.2"
punktf-lib = { version = "2.0.0", path = "crates/punktf-lib", features = ["profile-all"] }

[profile.dev]
opt-level = 0
# Only retain line level debug information; This will speed up the build process
# and is only used when debugging.
debug = 1

[profile.dev.package.backtrace]
# color-eyre: Improves performance for debug builds
opt-level = 3

[profile.release]
lto = "thin"
# Optimize for binary size. In this case also turns out to be the fastest to
# compile.
opt-level = "s"
# Strip symbols for the release build to decrease binary size
# strip = true
# Reduces parallel code generation units to increase optimizations
codegen-units = 1
# Dont retain any debug information; This will speed up the build process
# and is only used when debugging.
debug = 0
# Can decreases build time
incremental = true
# Strip debuginfo and symbols form release binary (New in version 1.59)
strip = true
