[workspace]
members = ["crates/*"]
exclude = ["guide/linkchecker"]
resolver = "2"

[workspace.package]
authors = ["Michael Lohr <michael@lohr.dev>", "Shemnei"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dotfiles", "cli", "dotfile", "dotfiles-manager", "templating"]

[workspace.dependencies]
# Shared
color-eyre = { version = "0.6.3", default-features = false }
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
pretty_assertions = "1.4.0"
# Lib
thiserror = "1.0.62"
walkdir = "2.5.0"
unicode-width = "0.1.13"
cfg-if = "1.0.0"
shellexpand = "3.1.0"
# Cli
clap = { version = "4.5.9", features = ["derive", "env"] }
clap_mangen = "0.2.22"
clap_complete = "4.5.8"
env_logger = "0.11.3"
similar = { version = "2.5.0", features = ["text", "unicode", "inline"] }
console = "0.15.8"
punktf-lib = { version = "2.0.1", path = "crates/punktf-lib", features = [
  "profile-all",
] }

[profile.dev]
opt-level = 0
# Only retain line level debug information; This will speed up the build process
# and is only used when debugging.
debug = 1

[profile.dev.package.backtrace]
# color-eyre: Improves performance for debug builds
opt-level = 3

[profile.release]
lto = "thin"
# Optimize for binary size. In this case also turns out to be the fastest to
# compile.
opt-level = "s"
# Strip symbols for the release build to decrease binary size
# strip = true
# Reduces parallel code generation units to increase optimizations
codegen-units = 1
# Dont retain any debug information; This will speed up the build process
# and is only used when debugging.
debug = 0
# Can decreases build time
incremental = true
# Strip debuginfo and symbols form release binary (New in version 1.59)
strip = true
