[package]
name = "punktf"
version = "1.0.3"
description = "A cross-platform multi-target dotfiles manager"
documentation = "https://github.com/Shemnei/punktf"
homepage = "https://github.com/Shemnei/punktf"
repository = "https://github.com/Shemnei/punktf"
categories = ["command-line-utilities", "config"]
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[[bin]]
path = "src/main.rs"
name = "punktf"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
env_logger.workspace = true
log.workspace = true
punktf-lib.workspace = true
similar.workspace = true
console.workspace = true
serde.workspace = true
# Optional dependencies can not be in the workspace dependencies
serde_json = "1.0.87"
serde_yaml = "0.9.14"
