[package]
name = "punktf-lib-gsgh"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
semver = { version = "1.0.18", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.25"
thiserror.workspace = true
version-compare = "0.1.1"
versions = { version = "5.0.0", features = ["serde"] }
