[package]
name = "punktf-lib"
version = "1.0.0"
authors = ["Michael Lohr <michael@lohr.dev>", "Shemnei"]
edition = "2021"
description = "Library for punktf, a cross-platform multi-target dotfiles manager"
documentation = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
homepage = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
repository = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
license= "MIT"
keywords = ["dotfiles", "cli", "dotfile", "dotfiles-manager", "templating"]

[lib]
name = "punktf_lib"

[features]

profile-all = ["profile-json", "profile-yaml"]
profile-json = ["serde_json"]
profile-yaml = ["serde_yaml"]

[dependencies]
color-eyre = { version = "0.5.11", default-features = false }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", optional = true }
serde_yaml = { version = "0.8.17", optional = true }
thiserror = "1.0.26"
walkdir = "2.3.2"
unicode-width = "0.1.8"
cfg-if = "1.0.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
env_logger = "0.9.0"
