[package]
name = "punktf-lib"
version = "1.0.2"
description = "Library for punktf, a cross-platform multi-target dotfiles manager"
documentation = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
homepage = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
repository = "https://github.com/Shemnei/punktf/tree/main/crates/punktf-lib"
exclude = ["/fuzz", "justfile"]
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "punktf_lib"

[features]
default = ["profile-all"]
profile-all = ["profile-json", "profile-yaml"]
profile-json = ["serde_json"]
profile-yaml = ["serde_yaml"]

[dependencies]
color-eyre.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true
unicode-width.workspace = true
cfg-if.workspace = true
# Optional dependencies can not be in the workspace dependencies
serde_json = { version = "1.0.89", optional = true }
serde_yaml = { version = "0.9.14", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
env_logger.workspace = true
